--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ libc = "0.2"
 ads1x1x = "0.2"
 nb = "1.1.0"
 rustyline = "14.0.0"
+serde = { "version" = "1.0", features = ["derive"] }
+toml = "0.8"
