--- a/growpi.toml
+++ b/growpi.toml
@@ -5,12 +5,7 @@ logic_level = 3.299999952316284
 light_pin = 0
 fan_pin = 1
 water_pump_pin = 2
-relay_gpio_pins = [
-    17,
-    27,
-    22,
-    -1,
-]
+relay_gpio_pins = [17, 27, 22, -1]
 
 [soil_moisture_settings]
 pin = 1
@@ -26,4 +21,4 @@ nominal_temperature = 298.1499938964844
 thermal_constant = 3950.0
 
 [water_pump_settings]
-milliseconds_to_grams = 0.05280999839305878
+milliseconds_to_grams = 0.06914
