--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
-name = "rpitest"
+name = "growpi"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 rppal = { version = "0.17", features = ["hal"] }
-#rumqttc = "0.24.0"
 libc = "0.2"
 ads1x1x = "0.2"
-nb = "1.1.0"
-rustyline = "14.0.0"
+nb = "1.1"
+rustyline = "14.0"
 serde = { "version" = "1.0", features = ["derive"] }
 toml = "0.8"
+axum = "0.7"
+tokio = { "version" = "1.37" }
