--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ nb = "1.1"
 rustyline = "14.0"
 serde = { "version" = "1.0", features = ["derive"] }
 toml = "0.8"
-axum = "0.7"
+axum = { "version" = "0.7", features = ["macros"] }
 tokio = { "version" = "1.37" }
+chrono = "0.4.38"
