--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ serde = { "version" = "1.0", features = ["derive"] }
 toml = "0.8"
 axum = { "version" = "0.7", features = ["macros"] }
 tokio = { "version" = "1.37" }
-chrono = "0.4.38"
+chrono = "0.4"
+tower-http = { "version" = "0.5", features = ["cors"] }
