--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ axum = { "version" = "0.7", features = ["macros"] }
 tokio = { "version" = "1.37" }
 chrono = "0.4"
 tower-http = { "version" = "0.5", features = ["cors"] }
+csv = "1.3.0"
