--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ tokio = { "version" = "1.37" }
 chrono = "0.4"
 tower-http = { "version" = "0.5", features = ["cors"] }
 csv = "1.3.0"
+rust-embed = { "version" = "8.3.0", features = ["debug-embed"] }
+mime_guess = "=2.0.4"
