--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,8 @@
 			"args": [
 				"build",
 				"--target",
-				"arm-unknown-linux-gnueabihf"
+				"arm-unknown-linux-gnueabihf",
+				"--release"
 			],
 			"problemMatcher": [
 				"$rustc"
