--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ tower-http = { "version" = "0.5", features = ["cors"] }
 csv = "1.3.0"
 rust-embed = { "version" = "8.3.0", features = ["debug-embed"] }
 mime_guess = "=2.0.4"
+tempdir = "0.3.7"
+async-process = "2.2.2"
