--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ rust-embed = { "version" = "8.3.0", features = ["debug-embed"] }
 mime_guess = "=2.0.4"
 tempdir = "0.3.7"
 async-process = "2.2.2"
+system_shutdown = "*"
